tests/spec/compile-pass/025_shared_interface_read_dispatch.zn
// category: compile-pass
// profile: freestanding
// purpose: Shared<Interface> supports read-only interface dispatch and visible refcount clone

module tests.pass.sharedInterfaceReadDispatch;

import core.alloc.GlobalAllocator;

interface Identified {
    fn id(self) -> U32;
}

struct Service: Copy {
    idValue: U32,
}

impl Identified for Service {
    fn id(self) -> U32 {
        return self.idValue;
    }
}

fn share(move service: Service, mut allocator: GlobalAllocator) -> Shared<Identified> {
    return Shared.newIn(move service, mut allocator);
}

fn readId(service: Shared<Identified>) -> U32 {
    return service.id();
}

fn cloneShared(service: Shared<Identified>) -> Shared<Identified> {
    return service.clone();
}
